--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-server.port=8080
-#server.servlet.context-path=/demo
-spring.datasource.url=jdbc:h2:file:~/Employee
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+#server.port=8080
+##server.servlet.context-path=/demo
+#spring.datasource.url=jdbc:h2:file:~/Employee
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#
+#spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
+#spring.jpa.show-sql=true 
 
-spring.h2.console.path=/h2
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3320/leavemanagement?useSSL=false&serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=password
